# ANNA16

./: 1.0.data_cleaning.R  1.1.blast.bash  1.2.unify_orient.R  1.3.hyperex.bash  1.4.make_full_length_csv.R  2.0.make_tree.bash  2.1.stat_algo.R  2.2.0.generate_taxa.R  2.2.1.taxonomic_averaging.ipynb  2.3.MLP.ipynb  2.4.Transformer.ipynb  3.0.stat_algo_subregions.R  3.1.method1.ipynb  3.2.method2.ipynb  3.3.method3.ipynb  4.0.deployment.ipynb  Predictor.py  README.md  anna16.py  anna16_env.yaml  extract_regions.sh  pyproject.toml  requirements.txt  run_anna16.py  setup.py
anna16/: CopyNumberPredictor.py  Preprocessing.py  __init__.py
primers/: V2_end_fwd.txt  V2_end_rev.txt  V3_start_fwd.txt  V3_start_rev.txt  V5_end_fwd.txt  V6_start_fwd.txt  V6_start_rev.txt  V7_start_fwd.txt  V7_start_rev.txt  V8_end_rev.txt  V9_end_rev.txt
src/anna16/: __init__.py
